fix overflow

--- a/main.css
+++ b/main.css
@@ -78,16 +78,15 @@ h1, h2, h3, h4, h5, h6{
 
 ol.gallery{
 	list-style-type: none;
-	overflow: hidden;
 	margin: 0;
 	padding: 0;
 	height: 200px;
 	width: 800px;
+	overflow: hidden;
 }
 ol.gallery li{
 	float: left;
 	width: 100px;
-	overflow: hidden;
 }
 ol.gallery li a{
 	border: 5px outset green;
